--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
 body {
-  /* background-image: url("/images/sands.jpg"); */
-  background-image: url("/images/demo2.gif");
+  background-image: url("/images/sands.jpg");
+  /* background-image: url("/images/demo2.gif"); */
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
 
 html, body {
   margin: 0;
@@ -63,7 +64,7 @@ html, body {
 }
 
 .spacer{
-  padding: 8em;
+  /* padding: 8em; */
 }
 
 #content1-section{
