--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,14 +97,90 @@ user-select: none;
 }
 
 .menu a:hover{
-  background-color: yellow;
-  color: black;
-  padding-top: 50em;
+  /* background-color: yellow; */
+  background-color: white;
 
-  padding-bottom: 1000em;
+  color: black;
+  padding-top: 4em;
+
+  padding-bottom: 100vh;
 }
 
 /* EXPERIMENTAL */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  font-family: 'Quantico', sans-serif;
+  background-color: #fefefe;
+  color: black;
+  font-size: 0.6em;
+  margin: 20% auto; /* 15% from the top and centered */
+  padding: 5px 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  text-align: justify;
+
+}
+
+.modal-content p{
+  margin: 30px 35px;
+}
+
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button{
+  font-size: 0.5em !important;
+  background: #fefefe;
+	color: black;
+	border: none;
+	padding: 7px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  margin-top: 1em;
+}
+
+#expBtn{
+  display: block;
+  position: absolute;
+  right: 10em;
+  transition: ease-out 0.1s;
+}
+
+#expBtn:hover{
+  right: 11em;
+}
+
+
+
 /* #header h3{
   font-size: 5em;
   text-align: center;
@@ -149,18 +225,23 @@ user-select: none;
 
 @keyframes pulse {
 	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+		/* transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7); */
+    bottom: 1em;
 	}
 
 	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+		/* transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0); */
+    bottom: 2em;
+
 	}
 
 	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+		/* transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); */
+    bottom: 1em;
+
 	}
 }
 
@@ -187,11 +268,12 @@ user-select: none;
 
 .c1d1{
   margin: 0 5em 0 5em;
-  font-size: 2em;
+  font-size: 1.5em;
   color: #F7F7F7;
+  text-align: justify;
 
 }
 
-.c1d1 p{
+.c1d1 > p{
   margin: 0;
 }
